<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu"
        android:title="@string/menu">
        <menu>
            <item
                android:id="@+id/m1"
                android:title="@string/ch1"/>
            <item
                android:id="@+id/m2"
                android:title="@string/ch2"/>

        </menu>
    </item>
    <item
        android:id="@+id/wallpaper"
        android:title="@string/wallpaper">
        <menu>
            <item
                android:id="@+id/w1"
                android:title="@string/wallpaperA"/>
            <item
                android:id="@+id/w2"
                android:title="@string/wallpaperB"/>
            <item
                android:id="@+id/w3"
                android:title="@string/wallpaperC"/>
        </menu>
    </item>
    <item
        android:id="@+id/color"
        android:title="@string/color">
        <menu>
            <item
                android:id="@+id/c1"
                android:title="@string/yellow"/>
            <item
                android:id="@+id/c2"
                android:title="@string/blue"/>
            <item
                android:id="@+id/c3"
                android:title="@string/red"/>
        </menu>
    </item>


</menu>